# Patterns

./: AppCore.cpp  AppCore.h  CMakeLists.txt  Circle.cpp  Circle.h  Dot.cpp  Dot.h  Figure.cpp  Figure.h  FigureComposite.cpp  FigureComposite.h  Line.cpp  Line.h  Rectangle.cpp  Rectangle.h  Snapshot.cpp  Snapshot.h  Star.cpp  Star.h  Triangle.cpp  Triangle.h  figures.txt  main.cpp
uml/: 1.puml
